--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -2810,5 +2810,9 @@
   "Trade now": "Trade now",
   "Saturn Syndicate: Trade perpetuals and share $10,000 rewards Daily reward for new users and to top the leaderboard": "Saturn Syndicate: Trade perpetuals and share $10,000 rewards Daily reward for new users and to top the leaderboard",
   "Earn rewards hassle-free with single-sided staking": "Earn rewards hassle-free with single-sided staking",
-  "Learn more about the strategy": "Learn more about the strategy"
+  "Learn more about the strategy": "Learn more about the strategy",
+  "You are providing liquidity via a 3rd party liquidity manager": "You are providing liquidity via a 3rd party liquidity manager",
+  "which is responsible for managing the underlying assets.": "which is responsible for managing the underlying assets.",
+  "Please always DYOR before depositing your assets.": "Please always DYOR before depositing your assets.",
+  "Single token deposits only. The final position may consist with both tokens. Learn more about the strategy": "Single token deposits only. The final position may consist with both tokens. Learn more about the strategy"
 }
